<resources>

    <string name="app_name">Radio.es</string>
    <string name="txt1">"Bienvenido/a a la aplicación de Radio.es. \n Pulse Continuar. </string>
    <string name="titulo">"Radio.es </string>
    <string name="about">Aplicación creada por: \n Lionel Sanchez (c) 2020</string>

    <string name="buton">Continuar</string>
    <string name="tv2">Estas Escuchando:</string>
    <string name="buton3">comentarios</string>
    <string name="inicioI2">Inicio</string>
    <string name="Historia">Historia Radio</string>

    <string name="reproductor">Ver Reproduccion</string>
    <string name="index">Index</string>
    <string name="b4">Volver</string>
    <string name="index_historia">Indice de contenido, pulse un elemento de la lista para consultar</string>
    <string name="masInfo">+ Info</string>
    <string name="ir">IR a:</string>

    <string name="tv4">Inicios de la radio</string>
    <string name="tituloIniciosHistoria">Bienvenido/a a la historia de la radio, pulsa un elemento de la lista para consulta</string>
    <string name="tv_Iniciosradio">Inicios de la radio</string>
    <string name="tv_evoluciion_radio">Evolucion de la radio</string>
    <string name="tv_futuro_radio">Futuro de la radio</string>
    <string name="tv_panel">Seleccione una emisora para escuchar, o ve a historia para ver la evolucion de la radio como medio de comunicacion</string>
    <string name="bt_enviarCom">Enviar</string>
    <string name="btcomentar">Comentar</string>

    <string name="tvtituloEvolucion">Evolucion de la radio</string>
    <string name="tvTituloFuturo">Futuro de la radio</string>

    <string name="item1">Volver al menú principal</string>
    <string name="item2">Copyright</string>
    <string name="item3">Versión de la Aplicación</string>
    <string name="salir_item">Salir de la app</string>

    <string name="tit_comentarios">Bienvenido a la seccion de comentarios, por favor, introduzca sus datos y un comentario</string>
    <string name="ed_cometario">Introduzca un comentario</string>
    <string name="ed_nombre">introduzca su nombre</string>
    <string name="ed_edad">introduzca su edad</string>
    <string name="ed_apellido">introduzca su apellido</string>
    <string name="vt_verCom">Ver datos</string>
    <string name="bd_titulo">Para Buscar informacion de una emisora en concreto, introduzca un numero del 1 al 10 y pulse buscar</string>
    <string name="bt_buscar">Buscar</string>
    <string name="tv_buscar">Para Buscar informacion de una emisora en concreto, pulse el boton ver datos</string>

    <string name="ednombreemisora">Nombre de emisora</string>
    <string name="ed_ciudad">Ciudad</string>
    <string name="ed_direccion_Stream">direccion</string>
    <string name="ed_comentario_usuario"> </string>

    <string name="idemisora">ID Emisora</string>
    <string name="nom_emisora">Nombre</string>
    <string name="ciudad_emisora">Ciudad</string>
    <string name="dir_stream">Direccion Stream</string>
    <string name="iddatos">ID datos</string>


</resources>
