<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CBE3EE"
    tools:context=".Seccion_Comentarios">

    <ScrollView
        android:layout_width="366dp"
        android:layout_height="729dp"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="29dp"
        android:layout_marginRight="29dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewTituloComentarios"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tit_comentarios"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editTextNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/ed_nombre"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editTextApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/ed_apellido"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editTextEdad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/ed_edad"
                android:inputType="number" />

            <EditText
                android:id="@+id/editTextComentario"
                android:layout_width="match_parent"
                android:layout_height="108dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/ed_cometario"
                android:inputType="textPersonName" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/buttonSend"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:drawable/ic_menu_send"
                        android:text="@string/bt_enviarCom" />

                    <Button
                        android:id="@+id/buttonVolver"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@android:drawable/ic_menu_revert"
                        android:onClick="atras"
                        android:text="@string/b4" />

                </TableRow>

            </TableLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_buscar" />

            <Button
                android:id="@+id/buttonVerCom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="verdatos"
                android:text="@string/vt_verCom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>