<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".histotria_radio">

    <TextView
        android:id="@+id/textViewTitulo_historia"
        android:layout_width="343dp"
        android:layout_height="89dp"
        android:layout_marginStart="69dp"
        android:layout_marginLeft="69dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="69dp"
        android:layout_marginRight="69dp"
        android:text="@string/tituloIniciosHistoria"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="354dp"
        android:layout_height="146dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitulo_historia">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonInicios"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="0"
                android:onClick="bt_inicios"
                android:text="@string/ir" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tv_Iniciosradio"
                android:textColor="#FFEB3B"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonEvolucion"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="bt_evolucion"
                android:text="@string/ir" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tv_evoluciion_radio"
                android:textColor="#FFEB3B"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonFuturo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="futuro"
                android:text="@string/ir" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tv_futuro_radio"
                android:textColor="#FFEB3B"
                android:textSize="30sp" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="348dp"
        android:layout_height="0dp"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout2">

        <Button
            android:id="@+id/buttonPort_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:drawable/ic_menu_revert"
            android:onClick="mainP"
            android:text="@string/inicioI2"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/buttonMasInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:drawable/ic_input_add"
            android:onClick="masinfo"
            android:text="@string/masInfo"
            android:textColor="#FFEB3B"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonCm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:drawable/sym_action_chat"
            android:onClick="comments"
            android:text="@string/buton3" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>