<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mifondo"
    tools:context=".main_historia">

    <TextView
        android:id="@+id/textViewmain"
        android:layout_width="399dp"
        android:layout_height="135dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/tituloIniciosHistoria"
        android:textColor="#FFEB3B"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewPortada"
        android:layout_width="226dp"
        android:layout_height="238dp"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewmain"
        app:srcCompat="@mipmap/ic_launcher" />

    <Button
        android:id="@+id/buttonmain"
        android:layout_width="100dp"
        android:layout_height="47dp"
        android:layout_marginStart="65dp"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="8dp"
        android:lineSpacingExtra="10sp"
        android:text="@string/inicioI2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPortada" />

    <Button
        android:id="@+id/buttonIndex"
        android:layout_width="100dp"
        android:layout_height="47dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:text="@string/index"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPortada" />

</androidx.constraintlayout.widget.ConstraintLayout>